[metadata]
name = convml_tt
author = Leif denby
author_email = l.c.denby@leeds.ac.uk
license = Apache
description = Neural Network based study of convective organisation
long_description_content_type=text/x-rst
long_description =

url = https://github.com//leifdenby/convml_tt
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    xarray
    netCDF4
    matplotlib
    pytorch-lightning >= 1.2.0
    kornia == 0.4.1
    sklearn
    seaborn
    parse
    jupyter
setup_requires =
    setuptools >= 40.4
    setuptools_scm


[options.extras_require]
sattiles =
    cartopy
    satpy
    esmpy
    xesmf
    satdata @ git+https://github.com/leifdenby/satdata@v0.1.3#egg=satdata

pipeline =
    luigi

extras =
    convorg @ git+https://github.com/leifdenby/convorg@v0.1.2#egg=convorg
    hdbscan


[tool:pytest]
python_files = test_*.py
testpaths = tests

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    .eggs
    doc

[isort]
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = convml_tt

[aliases]
test = pytest

[pytest-watch]
nobeep = True

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = convml_tt/_version.py
versionfile_build = convml_tt/_version.py
tag_prefix =
