[metadata]
name = convml-tt
version = attr: convml_tt.VERSION
author = Leif denby
author_email = l.c.denby@leeds.ac.uk
license = Apache
description = Neural Network based study of convective organisation
long_description = file: README.md

url = https://github.com/convml/convml_tt
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    xarray
    netCDF4
    matplotlib
    pytorch-lightning >= 1.2.0
    kornia >= 0.5.0
    sklearn
    seaborn
    parse
    jupyter
    scikit-image
    antialiased-cnns >= 0.3
    torchvision >= 0.4.0
    semver
setup_requires =
    setuptools >= 40.4
    setuptools_scm


[options.extras_require]
extras =
    hdbscan

test =
  pytest
  nbval
  nb-black

dev =
  %(test)s
  pre-commit
  ipython


[tool:pytest]
python_files = test_*.py
testpaths = tests

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
    C901 # function is too complex
exclude=
    .eggs
    doc
# allow for unused imports in __init__.py files
per-file-ignores = __init__.py:F401
extend-ignore = E203, E266, E501
# line length is intentionally set to 80 here because black uses Bugbear
# See https://github.com/psf/black/blob/master/docs/the_black_code_style.md#line-length for more details
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[isort]
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = convml_tt

[aliases]
test = pytest

[pytest-watch]
nobeep = True

[pylint.TYPECHECK]
# List of members which are set dynamically and missed by Pylint inference
# system, and so shouldn't trigger E1101 when accessed.
generated-members=numpy.*, torch.*
good-names=i,j,df,n_*
